@@ -1,5 +1,9 @@
 2008-04-22  Bastien Nocera  <hadess@hadess.net>
 
+	* Makefile.am: Add check for mime-types without comments
+
+2008-04-22  Bastien Nocera  <hadess@hadess.net>
+
 	* Makefile.am: Check for acronyms without any expanded acronyms
 
 2008-04-22  Bastien Nocera  <hadess@hadess.net>
